--- a/views/template/foot.pug
+++ b/views/template/foot.pug
@@ -50,7 +50,7 @@ svg(height="1px" width="1px")
 			.col
 				.hd Important
 				a(href="/rules") Rules
-				a(href="#") FAQ
+				a(href="/faq") FAQ
 
 			.col
 				.hd Who
