--- a/views/template/foot.pug
+++ b/views/template/foot.pug
@@ -43,23 +43,21 @@ svg(height="1px" width="1px")
 	footer
 		.wrap
 			.col
-				//- .logo [logo]
 				.title TP Super League
 				.desc An alternative TagPro league for Europeans. Founded by <a href="https://tagpro.koalabeast.com/profile/52d14ba81c0f1b1421277d0c">anom</a>
-
-			.col
-				.hd Important
-				a(href="/rules") Rules
-				a(href="/faq") FAQ
-
-			.col
-				.hd Who
-				a(href="#") About
-				a(href="#") Changelog
-				a(href="#") Feedback
 
 			.col
 				.hd Resources
 				a(href="https://discord.com/invite/uJxUcSR") Discord
 				a(href="https://twitch.com/tpsuperleague") Twitch
 				a(href="https://reddit.com/r/eltp") Subreddit
+
+			.col
+				.hd Important
+				// a(href="/rules") Rules
+				a(href="/faq") FAQ
+				a(href="https://www.reddit.com/message/compose?to=zompus&subject=TagPro.dev Feedback") Feedback
+
+			.col
+				.hd Unimportant
+				a(href="/changelog.txt") Changelog.txt
