--- a/views/template/player-nav.pug
+++ b/views/template/player-nav.pug
@@ -8,4 +8,4 @@
 			a(href=config.path + "/seasons" class=(config.nav.page === 'seasons' ? 'active' : '')) Seasons
 			a(href=config.path + "/allies" class=(config.nav.page === 'allies' ? 'active' : '')) Allies
 			a(href=config.path + "/opponents" class=(config.nav.page === 'opponents' ? 'active' : '')) Opponents
-			// a(href=config.path + "/maps" class=(config.nav.page === 'maps' ? 'active' : '')) Maps
+			a(href=config.path + "/maps" class=(config.nav.page === 'maps' ? 'active' : '')) Maps
