--- a/views/template/head.pug
+++ b/views/template/head.pug
@@ -7,7 +7,7 @@ html
 		link(rel='stylesheet', href='/init.css')
 		link(rel='icon', href='/favicon.svg', type='image/svg+xml')
 		script(defer, src='/init.js')
-		// script(defer, type="text/javascript", src="https://api.pirsch.io/pirsch.js", id="pirschjs", data-code="rCf3zbJZfR6JWanXlrObtEsAvLrlZLHS")
+		script(defer, type="text/javascript", src="https://api.pirsch.io/pirsch.js", id="pirschjs", data-code="rCf3zbJZfR6JWanXlrObtEsAvLrlZLHS")
 
 	body(
 		class= config.nav.cat
@@ -25,7 +25,6 @@ html
 			a(href="/nf/1" class=(config.nav.cat === 'nf' ? 'active' : ''))
 				span NF
 
-
 			a(href="/ecltp/8" class=(config.nav.cat === 'ecltp' ? 'active' : ''))
 				span ECLTP
 
@@ -36,10 +35,10 @@ html
 				span Players
 
 			// a(href="/leaderboards" class=(config.nav.cat === 'leaderboards' ? 'active' : ''))
-			// 	span Leaderboard
+			// 	span Leaders
 
-			// .right
-			// 	input(type="text", placeholder="Search", name="tagpro.dev search")
+			.right
+				// input(type="text", placeholder="Search", name="tagpro.dev search")
 
-			// 	a(href="#")
-			// 		span Login
+				a(href="/ctf/2")
+					span CTF Signups Open
