--- a/src/css/superleague.styl
+++ b/src/css/superleague.styl
@@ -683,16 +683,33 @@
 
 			li
 
-				&:hover
-					background rgba(black, .2)
-
 				.name
-					font-size .8rem
+					display inline-block
+					width 60%
+					margin-left 1rem
+
+					a
+						text-decoration none
+						font-size .8rem
+						line-height 1.6rem
+						color #dbdbdb
+						display inline
+						padding-bottom 3px
+
+				.extra
+					font-size .76rem
 					line-height 1.6rem
 					display inline-block
-					width 80%
-					color #dbdbdb
-					padding-left 1rem
+					width 10%
+					text-align center
+					color #b9b9b9
+
+				.captain
+					svg
+						height .6rem
+						width .6rem
+						fill var(--teamcolor)
+						vertical-align -2px
 
 				.country
 					display inline-block
@@ -707,8 +724,19 @@
 						border-radius 3px
 						box-shadow 0 0 10px rgba(black, .3)
 						position relative
-						top 1px
+						top 2px
 
+				&:hover
+					background rgba(black, .2)
+
+					.name
+
+						a
+							color #538cff
+							box-shadow inset 0 -2px 0 0 #538cff33
+
+							&:hover
+								box-shadow none
 
 
 
