--- a/src/css/superleague.styl
+++ b/src/css/superleague.styl
@@ -1111,6 +1111,9 @@
 			color #747474
 			border-radius inherit
 			border-bottom none
+			position sticky
+			top 0
+			z-index 1
 
 			[data-column]
 				&:not(.active):hover
