--- a/views/superleague-overview.pug
+++ b/views/superleague-overview.pug
@@ -63,7 +63,7 @@ include template/superleague-nav.pug
 									allowfullscreen
 								)
 
-						// a(href="#").watchfinal ???
+						a(href=config.path + "/stats/final").watchfinal Playoff Final Stats
 
 
 				// playoff champions
