--- a/views/signup.pug
+++ b/views/signup.pug
@@ -41,7 +41,7 @@ html
 			.new
 				.left
 					h1= config.title
-					p.details Season 2 of the <span>CTF Super League</span> will run for <span>3 weeks</span> throughout <span>May</span>, with games played <span>Monday</span> and <span>Thursday</span> 7:30pm GMT.
+					p.details Season 2 of the <span>CTF Super League</span> will run for <span>3 weeks</span> throughout <span>May</span>, with games played <span>Monday</span> and <span>Thursday</span> 20:00 BST.
 
 					h2 Paste in your Profile URL
 					.form
