--- a/views/template/head.pug
+++ b/views/template/head.pug
@@ -40,5 +40,8 @@ html
 			.right
 				// input(type="text", placeholder="Search", name="tagpro.dev search")
 
-				a(href="/ctf/2")
-					span CTF Signups Open
+				a(href="/spy")
+					span 🕵️
+
+				// a(href="/ctf/2")
+				// 	span CTF Signups Open
