--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -130,7 +130,7 @@ body
 		a
 			color white !important
 			box-shadow 0 2px 0 0 #ffffff24
-			text-shadow 0 0 20px #ffffff
+			text-shadow 0 0 20px #ffffff6b
 
 		input
 			font-size .85rem
