--- a/src/css/spy.styl
+++ b/src/css/spy.styl
@@ -34,6 +34,8 @@
 				flex 0 0 10%
 				box-sizing border-box
 				color #747474
+				justify-content left
+				padding-left .5%
 
 			.item.flair.winrate
 				span
