--- a/src/css/spy.styl
+++ b/src/css/spy.styl
@@ -59,6 +59,302 @@
 
 
 
+[data-flair="TagPro Developer"] {
+  background-position: -32px -16px;
+}
+
+[data-flair="Moderator"] {
+  background-position: -96px 0px;
+}
+
+[data-flair="Level 1 Donor"] {
+  background-position: -16px -16px;
+}
+
+[data-flair="Monthly Leader Board Winner"] {
+  background-position: -32px 0px;
+}
+
+[data-flair="Weekly Leader Board Winner"] {
+  background-position: -16px 0px;
+}
+
+[data-flair="Daily Leader Board Winner"] {
+  background-position: 0px 0px;
+}
+
+[data-flair="Awesome Win Rate"] {
+  background-position: -64px 0px;
+}
+
+[data-flair="Good Win Rate"] {
+  background-position: -48px 0px;
+}
+
+[data-flair="Happy Birthday TagPro"] {
+  background-position: 0px -32px;
+}
+
+[data-flair="Lucky You"] {
+  background-position: -16px -32px;
+}
+
+[data-flair="How Foolish"] {
+  background-position: -32px -32px;
+}
+
+[data-flair="Hare Today, Goon Tomorrow"] {
+  background-position: -48px -32px;
+}
+
+[data-flair="UnfortunateSniper Hacks TagPro"] {
+  background-position: -64px -32px;
+}
+
+[data-flair="Happy 2nd Birthday TagPro"] {
+  background-position: -112px -32px;
+}
+
+[data-flair="All balls are created equal!"] {
+  background-position: -32px -48px;
+}
+
+[data-flair="Happy 3rd Birthday TagPro"] {
+  background-position: -96px -48px;
+}
+
+[data-flair="Pup Drunk"] {
+  background-position: -128px -48px;
+}
+
+[data-flair="Participation Egg"] {
+  background-position: -144px -48px;
+}
+
+[data-flair="Valued Member Egg"] {
+  background-position: -160px -48px;
+}
+
+[data-flair="Cheap Christmas Candy"] {
+  background-position: -64px -64px;
+}
+
+[data-flair="Ho! Ho! Ho!"] {
+  background-position: -96px -64px;
+}
+
+[data-flair="Soccer Ball"] {
+  background-position: -192px -32px;
+}
+
+[data-flair="Football"] {
+  background-position: -176px -32px;
+}
+
+[data-flair="Delicious Candy Corn"] {
+  background-position: -160px -64px;
+}
+
+[data-flair="Compass"] {
+  background-position: -48px -128px;
+}
+
+[data-flair="Golden Fall Leaf"] {
+  background-position: -64px -128px;
+}
+
+[data-flair="Jimmy"] {
+  background-position: -80px -128px;
+}
+
+[data-flair="Cleaver"] {
+  background-position: -96px -128px;
+}
+
+[data-flair="Christmas Tree"] {
+  background-position: -112px -128px;
+}
+
+[data-flair="ylambda"] {
+  background-position: -128px -128px;
+}
+
+[data-flair="Counterfeit Leprechaun Hat"] {
+  background-position: -176px -112px;
+}
+
+[data-flair="Counterfeit Jester Hat"] {
+  background-position: -192px -112px;
+}
+
+[data-flair="Counterfeit Bunny Ears"] {
+  background-position: -160px -112px;
+}
+
+[data-flair="Stay Safe Flair"] {
+  background-position: -192px -128px;
+}
+
+[data-flair="Fight Injustice Flair"] {
+  background-position: 0px -144px;
+}
+
+[data-flair="Reaper"] {
+  background-position: -112px -144px;
+}
+
+[data-flair="Devil Horns"] {
+  background-position: -128px -144px;
+}
+
+[data-flair="Ghost"] {
+  background-position: -144px -144px;
+}
+
+[data-flair="Pumpkin Collector"] {
+  background-position: -160px -144px;
+}
+
+[data-flair="Ukrainian Sunflower"] {
+  background-position: -176px -144px;
+}
+
+[data-flair="Ukrainian Fighter"] {
+  background-position: -192px -144px;
+}
+
+[data-flair="Pirate Hat"] {
+  background-position: 0px -160px;
+}
+
+[data-flair="Parrot"] {
+  background-position: -16px -160px;
+}
+
+[data-flair="Shark"] {
+  background-position: -32px -160px;
+}
+
+[data-flair="Duck"] {
+  background-position: -176px -48px;
+}
+
+[data-flair="Pencil"] {
+  background-position: -48px -112px;
+}
+
+[data-flair="Bacon"] {
+  background-position: 0px -80px;
+}
+
+[data-flair="Baseball"] {
+  background-position: -64px -112px;
+}
+
+[data-flair="Banada"] {
+  background-position: -48px -160px;
+}
+
+[data-flair="Moon"] {
+  background-position: -16px -80px;
+}
+
+[data-flair="Penguin"] {
+  background-position: -112px -96px;
+}
+
+[data-flair="Chess Piece"] {
+  background-position: -192px -160px;
+}
+
+[data-flair="Music Notes"] {
+  background-position: -64px -160px;
+}
+
+[data-flair="Freezing"] {
+  background-position: -32px -80px;
+}
+
+[data-flair="Dolphin"] {
+  background-position: -48px -80px;
+}
+
+[data-flair="Alien"] {
+  background-position: -64px -80px;
+}
+
+[data-flair="Tomato"] {
+  background-position: -80px -112px;
+}
+
+[data-flair="Road Sign"] {
+  background-position: -80px -80px;
+}
+
+[data-flair="Peace"] {
+  background-position: -96px -80px;
+}
+
+[data-flair="Magma"] {
+  background-position: -128px -96px;
+}
+
+[data-flair="Flux Capacitor"] {
+  background-position: -112px -80px;
+}
+
+[data-flair="Microphone"] {
+  background-position: -128px -80px;
+}
+
+[data-flair="Boiling"] {
+  background-position: -144px -80px;
+}
+
+[data-flair="Dalmatians"] {
+  background-position: 0px -96px;
+}
+
+[data-flair="Yellow Lightning"] {
+  background-position: -96px -112px;
+}
+
+[data-flair="ABC"] {
+  background-position: -16px -96px;
+}
+
+[data-flair="Plane"] {
+  background-position: -144px -96px;
+}
+
+[data-flair="Boombox"] {
+  background-position: -176px -160px;
+}
+
+[data-flair="Love"] {
+  background-position: -32px -96px;
+}
+
+[data-flair="Pokemon"] {
+  background-position: -48px -96px;
+}
+
+[data-flair="Phi"] {
+  background-position: -64px -96px;
+}
+
+[data-flair="U Turn"] {
+  background-position: -80px -96px;
+}
+
+[data-flair="World"] {
+  background-position: -96px -96px;
+}
+
+[data-flair="Kongregate"] {
+  background-position: -96px -16px;
+}
+
 [data-flair="Remove Flair"] {
 	background-position: 25px -5px;
 }
@@ -533,6 +829,18 @@
 
 [data-flair="Arc Reactor"] {
   background-position: -144px -112px;
+}
+
+[data-flair="Magnifying Glass"] {
+	background-position: -160px -160px;
+}
+
+[data-flair="Rainbow"] {
+	background-position: -80px -160px;
+}
+
+[data-flair="Monitor"] {
+	background-position: -128px 0;
 }
 
 
