--- a/views/template/foot.pug
+++ b/views/template/foot.pug
@@ -41,8 +41,8 @@ svg(height="1px" width="1px")
 	footer
 		.wrap
 			.col
-				.title TP Super League
-				.desc An alternative TagPro league for Europeans. Founded by <a href="https://tagpro.koalabeast.com/profile/52d14ba81c0f1b1421277d0c">anom</a>
+				.title Tagpro.dev
+				.desc An alternative TagPro hub for Europeans. Founded by <a href="https://tagpro.koalabeast.com/profile/52d14ba81c0f1b1421277d0c">anom</a>
 
 			.col
 				.hd Resources
