--- a/views/signup.pug
+++ b/views/signup.pug
@@ -40,13 +40,13 @@ html
 			.new
 				.left
 					h1= config.title
-					p.details Season 2 of the <span>CTF Super League</span> will run for <span>3 weeks</span> throughout <span>May</span>, with games played <span>Monday</span> and <span>Thursday</span> 20:00 BST.
+					p.details Season 2 of the <span>NF Super League</span> will run for <span>3 weeks</span> throughout <span>April</span>, with games played <span>Sunday</span> and <span>Monday</span> 20:00 BST.
 
 					h2 Paste in your Profile URL
 					.form
 						input(type="text" placeholder="https://tagpro.koalabeast.com/profile/52fb8f2e2c955cb762a572fd" required pattern="http(s?)(:\/\/)((www.)?)(([^.]+)\.)?([a-zA-z0-9\-_]+)(.com|.net|.gov|.org|.in)(\/[^\s]*)?")
 
-					.info Please DO NOT sign up unless you're able to make the majority of dates. You don't need to be the best player. You do need to be committed.
+					.info You don't need to be the best player. You do need to be committed. It's fine if you're unable to make all dates, just let me know in advance.
 
 				.right
 					h2 Signup Quota
