--- a/views/signup.pug
+++ b/views/signup.pug
@@ -39,8 +39,9 @@ html
 
 			.new
 				.left
-					h1= config.title
-					p.details Season 2 of the <span>NF Super League</span> will run for <span>3 weeks</span> throughout <span>April</span>, with games played <span>Sunday</span> and <span>Monday</span> 20:00 BST.
+					// h1= config.title
+					h1 ECLTP Season 9 Signup
+					p.details Season 9 of <span>ECLTP</span> will run for <span>3 weeks</span> throughout <span>March</span>, with games played <span>Sunday</span> and <span>Monday</span> 20:00 BST.
 
 					h2 Paste in your Profile URL
 					.form
