--- a/views/signup.pug
+++ b/views/signup.pug
@@ -1,7 +1,8 @@
 doctype html
 html
 	head
-		title= config.title
+		// title= config.title
+		title ECLTP Season 9 Signup
 		meta(charset='utf-8')
 		link(rel='stylesheet', href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap")
 		link(rel='stylesheet', href='/signup.css')
