--- a/src/css/spy.styl
+++ b/src/css/spy.styl
@@ -59,12 +59,12 @@
 
 
 
-[data-flair="TagPro Developer"] {
-  background-position: -32px -16px;
+[data-flair="TagPro Future Group"] {
+  background-position: -176px -16px;
 }
 
-[data-flair="Moderator"] {
-  background-position: -96px 0px;
+[data-flair="Dinosaur"] {
+  background-position: -160px -16px;
 }
 
 [data-flair="Level 1 Donor"] {
@@ -81,6 +81,10 @@
 
 [data-flair="Daily Leader Board Winner"] {
   background-position: 0px 0px;
+}
+
+[data-flair="Insane Win Rate"] {
+  background-position: -80px 0px;
 }
 
 [data-flair="Awesome Win Rate"] {
@@ -113,6 +117,22 @@
 
 [data-flair="Happy 2nd Birthday TagPro"] {
   background-position: -112px -32px;
+}
+
+[data-flair="Good and Lucky"] {
+  background-position: -144px -32px;
+}
+
+[data-flair="Clowning Around Gravity"] {
+  background-position: -160px -32px;
+}
+
+[data-flair="Racing For Eggs"] {
+  background-position: 0px -48px;
+}
+
+[data-flair="Racing For Carrots"] {
+  background-position: -16px -48px;
 }
 
 [data-flair="All balls are created equal!"] {
@@ -179,6 +199,18 @@
   background-position: -128px -128px;
 }
 
+[data-flair="Gross Peanut Butter Candy"] {
+  background-position: -144px -128px;
+}
+
+[data-flair="Zombie Head Trophy"] {
+  background-position: -160px -128px;
+}
+
+[data-flair="Jimmywise Mask"] {
+  background-position: -176px -128px;
+}
+
 [data-flair="Counterfeit Leprechaun Hat"] {
   background-position: -176px -112px;
 }
@@ -197,6 +229,30 @@
 
 [data-flair="Fight Injustice Flair"] {
   background-position: 0px -144px;
+}
+
+[data-flair="Tombstone"] {
+  background-position: -16px -144px;
+}
+
+[data-flair="Rat"] {
+  background-position: -32px -144px;
+}
+
+[data-flair="Vampire"] {
+  background-position: -48px -144px;
+}
+
+[data-flair="Ogre"] {
+  background-position: -64px -144px;
+}
+
+[data-flair="Tiara"] {
+  background-position: -80px -144px;
+}
+
+[data-flair="Dragon"] {
+  background-position: -96px -144px;
 }
 
 [data-flair="Reaper"] {
@@ -351,454 +407,6 @@
   background-position: -96px -96px;
 }
 
-[data-flair="Kongregate"] {
-  background-position: -96px -16px;
-}
-
-[data-flair="Remove Flair"] {
-	background-position: 25px -5px;
-}
-
-[data-flair="TagPro Developer"] {
-  background-position: -32px -16px;
-}
-
-[data-flair="Community Contributor"] {
-  background-position: 0px -16px;
-}
-
-[data-flair="Moderator"] {
-  background-position: -96px 0px;
-}
-
-[data-flair="Map Tester"] {
-  background-position: -112px 0px;
-}
-
-[data-flair="Level 1 Donor"] {
-  background-position: -16px -16px;
-}
-
-[data-flair="Level 2 Donor"] {
-  background-position: -48px -16px;
-}
-
-[data-flair="Level 3 Donor"] {
-  background-position: -64px -16px;
-}
-
-[data-flair="Level 4 Donor"] {
-  background-position: -112px -16px;
-}
-
-[data-flair="Bitcoin Donor (Any Amount)"] {
-  background-position: -128px -16px;
-}
-
-[data-flair="Community Contest Winner"] {
-  background-position: -80px -16px;
-}
-
-[data-flair="Kongregate"] {
-  background-position: -96px -16px;
-}
-
-[data-flair="Monthly Leader Board Winner"] {
-  background-position: -32px 0px;
-}
-
-[data-flair="Weekly Leader Board Winner"] {
-  background-position: -16px 0px;
-}
-
-[data-flair="Daily Leader Board Winner"] {
-  background-position: 0px 0px;
-}
-
-[data-flair="Insane Win Rate"] {
-  background-position: -80px 0px;
-}
-
-[data-flair="Awesome Win Rate"] {
-  background-position: -64px 0px;
-}
-
-[data-flair="Good Win Rate"] {
-  background-position: -48px 0px;
-}
-
-[data-flair="Happy Birthday TagPro"] {
-  background-position: 0px -32px;
-}
-
-[data-flair="Lucky You"] {
-  background-position: -16px -32px;
-}
-
-[data-flair="How Foolish"] {
-  background-position: -32px -32px;
-}
-
-[data-flair="Hare Today, Goon Tomorrow"] {
-  background-position: -48px -32px;
-}
-
-[data-flair="UnfortunateSniper Hacks TagPro"] {
-  background-position: -64px -32px;
-}
-
-[data-flair="So Very Scary"] {
-  background-position: -80px -32px;
-}
-
-[data-flair="Daryl Would Be Proud"] {
-  background-position: -96px -32px;
-}
-
-[data-flair="Happy 2nd Birthday TagPro"] {
-  background-position: -112px -32px;
-}
-
-[data-flair="Tower 1-1 Complete"] {
-  background-position: -128px -32px;
-}
-
-[data-flair="Good and Lucky"] {
-  background-position: -144px -32px;
-}
-
-[data-flair="Clowning Around Gravity"] {
-  background-position: -160px -32px;
-}
-
-[data-flair="Racing For Eggs"] {
-  background-position: 0px -48px;
-}
-
-[data-flair="Racing For Carrots"] {
-  background-position: -16px -48px;
-}
-
-[data-flair="All balls are created equal!"] {
-  background-position: -32px -48px;
-}
-
-[data-flair="Easy as Pumpkin Pie"] {
-  background-position: -48px -48px;
-}
-
-[data-flair="DOOT DOOT"] {
-  background-position: -80px -48px;
-}
-
-[data-flair="Lighter Than a Duck"] {
-  background-position: -64px -48px;
-}
-
-[data-flair="Happy 3rd Birthday TagPro"] {
-  background-position: -96px -48px;
-}
-
-[data-flair="Tower 1-2 Complete"] {
-  background-position: -112px -48px;
-}
-
-[data-flair="Pup Drunk"] {
-  background-position: -128px -48px;
-}
-
-[data-flair="Participation Egg"] {
-  background-position: -144px -48px;
-}
-
-[data-flair="Valued Member Egg"] {
-  background-position: -160px -48px;
-}
-
-[data-flair="Bounty Hunter Egg"] {
-  background-position: 0px -64px;
-}
-
-[data-flair="Really? Another Pumpkin?"] {
-  background-position: -16px -64px;
-}
-
-[data-flair="MMM... Brains"] {
-  background-position: -32px -64px;
-}
-
-[data-flair="Backstabber"] {
-  background-position: -48px -64px;
-}
-
-[data-flair="Cheap Christmas Candy"] {
-  background-position: -64px -64px;
-}
-
-[data-flair="You Could Catch Me!"] {
-  background-position: -80px -64px;
-}
-
-[data-flair="Ho! Ho! Ho!"] {
-  background-position: -96px -64px;
-}
-
-[data-flair="Happy 4th Birthday TagPro"] {
-  background-position: -112px -64px;
-}
-
-[data-flair="Tower 1-3 Complete"] {
-  background-position: -128px -64px;
-}
-
-[data-flair="WOAH! It's real!"] {
-  background-position: -144px -64px;
-}
-
-[data-flair="Soccer Ball"] {
-  background-position: -192px -32px;
-}
-
-[data-flair="Football"] {
-  background-position: -176px -32px;
-}
-
-[data-flair="Delicious Candy Corn"] {
-  background-position: -160px -64px;
-}
-
-[data-flair="Bat"] {
-  background-position: -176px -64px;
-}
-
-[data-flair="Jack"] {
-  background-position: -192px -64px;
-}
-
-[data-flair="Happy 5th Birthday TagPro"] {
-  background-position: 0px -128px;
-}
-
-[data-flair="Coin"] {
-  background-position: -16px -128px;
-}
-
-[data-flair="Question Block"] {
-  background-position: -32px -128px;
-}
-
-[data-flair="Compass"] {
-  background-position: -48px -128px;
-}
-
-[data-flair="Golden Fall Leaf"] {
-  background-position: -64px -128px;
-}
-
-[data-flair="Jimmy"] {
-  background-position: -80px -128px;
-}
-
-[data-flair="Cleaver"] {
-  background-position: -96px -128px;
-}
-
-[data-flair="Christmas Tree"] {
-  background-position: -112px -128px;
-}
-
-[data-flair="ylambda"] {
-  background-position: -128px -128px;
-}
-
-[data-flair="Gross Peanut Butter Candy"] {
-  background-position: -144px -128px;
-}
-
-[data-flair="Zombie Head Trophy"] {
-  background-position: -160px -128px;
-}
-
-[data-flair="Jimmywise Mask"] {
-  background-position: -176px -128px;
-}
-
-[data-flair="Counterfeit Leprechaun Hat"] {
-  background-position: -176px -112px;
-}
-
-[data-flair="Counterfeit Jester Hat"] {
-  background-position: -192px -112px;
-}
-
-[data-flair="Counterfeit Bunny Ears"] {
-  background-position: -160px -112px;
-}
-
-[data-flair="Stay Safe Flair"] {
-  background-position: -192px -128px;
-}
-
-[data-flair="Fight Injustice Flair"] {
-  background-position: 0px -144px;
-}
-
-[data-flair="Tombstone"] {
-  background-position: -16px -144px;
-}
-
-[data-flair="Rat"] {
-  background-position: -32px -144px;
-}
-
-[data-flair="Vampire"] {
-  background-position: -48px -144px;
-}
-
-[data-flair="Ogre"] {
-  background-position: -64px -144px;
-}
-
-[data-flair="Tiara"] {
-  background-position: -80px -144px;
-}
-
-[data-flair="Dragon"] {
-  background-position: -96px -144px;
-}
-
-[data-flair="Reaper"] {
-  background-position: -112px -144px;
-}
-
-[data-flair="Devil Horns"] {
-  background-position: -128px -144px;
-}
-
-[data-flair="Ghost"] {
-  background-position: -144px -144px;
-}
-
-[data-flair="Pumpkin Collector"] {
-  background-position: -160px -144px;
-}
-
-[data-flair="Ukrainian Sunflower"] {
-  background-position: -176px -144px;
-}
-
-[data-flair="Ukrainian Fighter"] {
-  background-position: -192px -144px;
-}
-
-[data-flair="Pirate Hat"] {
-  background-position: 0px -160px;
-}
-
-[data-flair="Parrot"] {
-  background-position: -16px -160px;
-}
-
-[data-flair="Shark"] {
-  background-position: -32px -160px;
-}
-
-[data-flair="Pencil"] {
-  background-position: -48px -112px;
-}
-
-[data-flair="Bacon"] {
-  background-position: 0px -80px;
-}
-
-[data-flair="Baseball"] {
-  background-position: -64px -112px;
-}
-
-[data-flair="Moon"] {
-  background-position: -16px -80px;
-}
-
-[data-flair="Penguin"] {
-  background-position: -112px -96px;
-}
-
-[data-flair="Freezing"] {
-  background-position: -32px -80px;
-}
-
-[data-flair="Dolphin"] {
-  background-position: -48px -80px;
-}
-
-[data-flair="Alien"] {
-  background-position: -64px -80px;
-}
-
-[data-flair="Tomato"] {
-  background-position: -80px -112px;
-}
-
-[data-flair="Road Sign"] {
-  background-position: -80px -80px;
-}
-
-[data-flair="Peace"] {
-  background-position: -96px -80px;
-}
-
-[data-flair="Magma"] {
-  background-position: -128px -96px;
-}
-
-[data-flair="Flux Capacitor"] {
-  background-position: -112px -80px;
-}
-
-[data-flair="Microphone"] {
-  background-position: -128px -80px;
-}
-
-[data-flair="Boiling"] {
-  background-position: -144px -80px;
-}
-
-[data-flair="Dalmatians"] {
-  background-position: 0px -96px;
-}
-
-[data-flair="Yellow Lightning"] {
-  background-position: -96px -112px;
-}
-
-[data-flair="ABC"] {
-  background-position: -16px -96px;
-}
-
-[data-flair="Plane"] {
-  background-position: -144px -96px;
-}
-
-[data-flair="Love"] {
-  background-position: -32px -96px;
-}
-
-[data-flair="Pokemon"] {
-  background-position: -48px -96px;
-}
-
-[data-flair="Phi"] {
-  background-position: -64px -96px;
-}
-
-[data-flair="U Turn"] {
-  background-position: -80px -96px;
-}
-
-[data-flair="World"] {
-  background-position: -96px -96px;
-}
-
 [data-flair="Bones"] {
   background-position: -128px -112px;
 }
@@ -811,37 +419,14 @@
   background-position: -112px -112px;
 }
 
+[data-flair="Magnifying Glass"] {
+  background-position: -160px -160px;
+}
+
 [data-flair="Uranium"] {
   background-position: -160px -96px;
 }
 
-[data-flair="Boxing"] {
-  background-position: -32px -112px;
-}
-
-[data-flair="Bowling"] {
-  background-position: 0px -112px;
-}
-
-[data-flair="Pi"] {
-  background-position: -16px -112px;
-}
-
-[data-flair="Arc Reactor"] {
-  background-position: -144px -112px;
-}
-
-[data-flair="Magnifying Glass"] {
-	background-position: -160px -160px;
-}
-
-[data-flair="Rainbow"] {
-	background-position: -80px -160px;
-}
-
-[data-flair="Monitor"] {
-	background-position: -128px 0;
-}
 
 
 // let raw = document.querySelectorAll('.flair-list li')
