--- a/src/css/spy.styl
+++ b/src/css/spy.styl
@@ -59,16 +59,90 @@
 
 
 
+
+
+[data-flair="TagPro Developer"] {
+  background-position: -32px -16px;
+}
+
 [data-flair="TagPro Future Group"] {
   background-position: -176px -16px;
+}
+
+[data-flair="Community Contributor"] {
+  background-position: 0px -16px;
+}
+
+[data-flair="Moderator"] {
+  background-position: -96px 0px;
+}
+
+[data-flair="Monitor"] {
+  background-position: -128px 0px;
+}
+
+[data-flair="Map Tester"] {
+  background-position: -112px 0px;
+}
+
+[data-flair="Artist"] {
+  background-position: -80px -16px;
+}
+
+[data-flair="Blueprint"] {
+  background-position: -144px 0px;
+}
+
+[data-flair="Chameleon"] {
+  background-position: -160px 0px;
+}
+
+[data-flair="Gramophone"] {
+  background-position: -176px 0px;
 }
 
 [data-flair="Dinosaur"] {
   background-position: -160px -16px;
 }
 
+[data-flair="Fossil"] {
+  background-position: -144px -16px;
+}
+
+[data-flair="Kongregate"] {
+  background-position: -96px -16px;
+}
+
 [data-flair="Level 1 Donor"] {
   background-position: -16px -16px;
+}
+
+[data-flair="Level 2 Donor"] {
+  background-position: -48px -16px;
+}
+
+[data-flair="Level 3 Donor"] {
+  background-position: -64px -16px;
+}
+
+[data-flair="Level 4 Donor"] {
+  background-position: -112px -16px;
+}
+
+[data-flair="Level 5 Donor"] {
+  background-position: -192px 0px;
+}
+
+[data-flair="Level 6 Donor"] {
+  background-position: -192px -16px;
+}
+
+[data-flair="Level 7 Donor"] {
+  background-position: -192px -48px;
+}
+
+[data-flair="Bitcoin Donor (Any Amount)"] {
+  background-position: -128px -16px;
 }
 
 [data-flair="Monthly Leader Board Winner"] {
@@ -115,8 +189,20 @@
   background-position: -64px -32px;
 }
 
+[data-flair="So Very Scary"] {
+  background-position: -80px -32px;
+}
+
+[data-flair="Daryl Would Be Proud"] {
+  background-position: -96px -32px;
+}
+
 [data-flair="Happy 2nd Birthday TagPro"] {
   background-position: -112px -32px;
+}
+
+[data-flair="Tower 1-1 Complete"] {
+  background-position: -128px -32px;
 }
 
 [data-flair="Good and Lucky"] {
@@ -139,8 +225,24 @@
   background-position: -32px -48px;
 }
 
+[data-flair="Easy as Pumpkin Pie"] {
+  background-position: -48px -48px;
+}
+
+[data-flair="DOOT DOOT"] {
+  background-position: -80px -48px;
+}
+
+[data-flair="Lighter Than a Duck"] {
+  background-position: -64px -48px;
+}
+
 [data-flair="Happy 3rd Birthday TagPro"] {
   background-position: -96px -48px;
+}
+
+[data-flair="Tower 1-2 Complete"] {
+  background-position: -112px -48px;
 }
 
 [data-flair="Pup Drunk"] {
@@ -155,12 +257,44 @@
   background-position: -160px -48px;
 }
 
+[data-flair="Bounty Hunter Egg"] {
+  background-position: 0px -64px;
+}
+
+[data-flair="Really? Another Pumpkin?"] {
+  background-position: -16px -64px;
+}
+
+[data-flair="MMM... Brains"] {
+  background-position: -32px -64px;
+}
+
+[data-flair="Backstabber"] {
+  background-position: -48px -64px;
+}
+
 [data-flair="Cheap Christmas Candy"] {
   background-position: -64px -64px;
 }
 
+[data-flair="You Could Catch Me!"] {
+  background-position: -80px -64px;
+}
+
 [data-flair="Ho! Ho! Ho!"] {
   background-position: -96px -64px;
+}
+
+[data-flair="Happy 4th Birthday TagPro"] {
+  background-position: -112px -64px;
+}
+
+[data-flair="Tower 1-3 Complete"] {
+  background-position: -128px -64px;
+}
+
+[data-flair="WOAH! It's real!"] {
+  background-position: -144px -64px;
 }
 
 [data-flair="Soccer Ball"] {
@@ -173,6 +307,26 @@
 
 [data-flair="Delicious Candy Corn"] {
   background-position: -160px -64px;
+}
+
+[data-flair="Bat"] {
+  background-position: -176px -64px;
+}
+
+[data-flair="Jack"] {
+  background-position: -192px -64px;
+}
+
+[data-flair="Happy 5th Birthday TagPro"] {
+  background-position: 0px -128px;
+}
+
+[data-flair="Coin"] {
+  background-position: -16px -128px;
+}
+
+[data-flair="Question Block"] {
+  background-position: -32px -128px;
 }
 
 [data-flair="Compass"] {
@@ -293,6 +447,22 @@
 
 [data-flair="Duck"] {
   background-position: -176px -48px;
+}
+
+[data-flair="Fancy Double Ply Idol"] {
+  background-position: -48px -176px;
+}
+
+[data-flair="It's Just a Flesh Wound Idol"] {
+  background-position: 0px -176px;
+}
+
+[data-flair="You Just Brought a Knife to an Idol Fight"] {
+  background-position: -16px -176px;
+}
+
+[data-flair="Pharaoh-well Jimmy Idol"] {
+  background-position: -32px -176px;
 }
 
 [data-flair="Pencil"] {
@@ -425,6 +595,42 @@
 
 [data-flair="Uranium"] {
   background-position: -160px -96px;
+}
+
+[data-flair="Hourglass"] {
+  background-position: -144px -160px;
+}
+
+[data-flair="Rainbow"] {
+  background-position: -80px -160px;
+}
+
+[data-flair="Boxing"] {
+  background-position: -32px -112px;
+}
+
+[data-flair="Wildflower"] {
+  background-position: -96px -160px;
+}
+
+[data-flair="Bowling"] {
+  background-position: 0px -112px;
+}
+
+[data-flair="Pi"] {
+  background-position: -16px -112px;
+}
+
+[data-flair="Rocket"] {
+  background-position: -112px -160px;
+}
+
+[data-flair="Sun"] {
+  background-position: -128px -160px;
+}
+
+[data-flair="Arc Reactor"] {
+  background-position: -144px -112px;
 }
 
 
