fix missing flair

--- a/src/css/spy.styl
+++ b/src/css/spy.styl
@@ -61,6 +61,11 @@
 
 
 
+
+[data-flair="Remove Flair"] {
+	background: transparent !important;
+}
+
 [data-flair="TagPro Developer"] {
   background-position: -32px -16px;
 }
