--- a/views/template/head.pug
+++ b/views/template/head.pug
@@ -21,18 +21,8 @@ html
 			a(href="/player" class=(config.nav.cat === 'players' ? 'active' : ''))
 				span Players
 
-			a(href="/ctf/1" class=(config.nav.cat === 'ctf' ? 'active' : ''))
-				span CTF
-
-			a(href="/nf/1" class=(config.nav.cat === 'nf' ? 'active' : ''))
-				span NF
-
 			a(href="/ecltp/9" class=(config.nav.cat === 'ecltp' ? 'active' : ''))
-				span ECLTP
-
-			// a(href="/egg/1" class=(config.nav.cat === 'egg' ? 'active' : ''))
-			// 	span EGG
-
+				span ECLTP 9
 
 			// a(href="/leaderboards" class=(config.nav.cat === 'leaderboards' ? 'active' : ''))
 			// 	span Leaders
