--- a/views/template/foot.pug
+++ b/views/template/foot.pug
@@ -42,7 +42,7 @@ svg(height="1px" width="1px")
 		.wrap
 			.col
 				.title Tagpro.dev
-				.desc An alternative TagPro hub for Europeans. Founded by <a href="https://tagpro.koalabeast.com/profile/52d14ba81c0f1b1421277d0c">anom</a>
+				.desc An alternative TagPro hub for Europeans. Made by <a href="https://tagpro.koalabeast.com/profile/52d14ba81c0f1b1421277d0c">anom</a>
 
 			.col
 				.hd Resources
