--- a/views/template/head.pug
+++ b/views/template/head.pug
@@ -28,7 +28,8 @@ html
 			// 	span Leaders
 
 			.right
-				// input(type="text", placeholder="Search", name="tagpro.dev search")
+				form(action="/search")
+					input(type="text", placeholder="Search player", name="q", value= search ? search : '', )
 
 				a(href="/spy")
 					span 🕵️
