--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -57,6 +57,12 @@ body
 				&:hover
 					color white
 
+			input
+				background-color #3a0e0ee6
+
+				&::placeholder
+					color #be4f4f
+
 .background
 	background black url('https://i.imgur.com/ycymETc.png')
 	background-position center -867px
