--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -66,7 +66,7 @@ body
 .background
 	background black url('https://i.imgur.com/ycymETc.png')
 	background-position center -867px
-	// background black url('https://i.imgur.com/trirbHV.png')
+	background black url('https://i.imgur.com/trirbHV.png')
 	// background-position center -922px
 	background-size auto 100%
 	background-repeat no-repeat
