--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -67,7 +67,7 @@ body
 	background black url('https://i.imgur.com/ycymETc.png')
 	background-position center -867px
 	background black url('https://i.imgur.com/trirbHV.png')
-	// background-position center -922px
+	background-position center -922px
 	background-size auto 100%
 	background-repeat no-repeat
 	width 100%
