--- a/views/template/head.pug
+++ b/views/template/head.pug
@@ -7,6 +7,13 @@ html
 		link(rel='stylesheet', href='/init.css')
 		link(rel='icon', href='/favicon.svg', type='image/svg+xml')
 		script(defer, src='/init.js')
+		|<script src="https://t.usermaven.com/lib.js"
+		|	data-key="UM0zeZQ89m"
+		|	data-tracking-host="https://events.usermaven.com"
+		|	data-autocapture="true"
+		|	defer>
+		|</script>
+		|<script>window.usermaven = window.usermaven || (function(){(window.usermavenQ = window.usermavenQ || []).push(arguments);})</script>
 
 	body(
 		class= config.nav.cat
