--- a/views/seasons.pug
+++ b/views/seasons.pug
@@ -7,7 +7,7 @@ include template/head.pug
 			.row.head
 				each n, key in seasons
 					each v, k in n
-						if(k === 'mode')
+						if(k === 'mode' || k === 'dateorder' || k === 'tier')
 							- continue
 
 						else if(k === 'number')
@@ -34,14 +34,15 @@ include template/head.pug
 				)
 
 					each v, k in n
-						if(k === 'mode')
+						if(k === 'mode' || k === 'dateorder' || k === 'tier')
 							- continue
 
 						else if(k === 'number')
+							- let tier = n['tier'] ? n['tier'] : ''
 							.item.player(style="padding-left:1rem")
 								a(
 									href='/' + n['mode'] + '/' + v
-								)= n['mode'] + ' ' + v
+								)= n['mode'] + ' ' + tier + ' ' + v
 
 						else if(k === 'playoffwinner')
 							if(v != null)
