--- a/src/css/superleague.styl
+++ b/src/css/superleague.styl
@@ -109,6 +109,7 @@
 								padding-left 2.2rem
 
 							.captain
+							.manager
 								display inline-block
 								position absolute
 								padding-left 1rem
@@ -704,6 +705,7 @@
 					color #b9b9b9
 
 				.captain
+				.manager
 					svg
 						height .6rem
 						width .6rem
