--- a/views/template/superleague-nav.pug
+++ b/views/template/superleague-nav.pug
@@ -8,7 +8,7 @@
 			.current Season #{config.season}
 
 		if config.nav.cat === 'ecltp'
-			h1 #{config.nav.cat.toUpperCase()}
+			h1 #{config.nav.cat.toUpperCase()} #{config.tier}
 		else
 			h1 #{config.nav.cat.toUpperCase()} Super League
 
