--- a/src/css/spy.styl
+++ b/src/css/spy.styl
@@ -66,6 +66,7 @@
 	background: transparent !important;
 }
 
+
 [data-flair="TagPro Developer"] {
   background-position: -32px -16px;
 }
@@ -146,6 +147,18 @@
   background-position: -192px -48px;
 }
 
+[data-flair="Original Event Master"] {
+  background-position: 0px -32px;
+}
+
+[data-flair="Original Event Master"] {
+  background-position: -112px -32px;
+}
+
+[data-flair="Event Master"] {
+  background-position: -64px -176px;
+}
+
 [data-flair="Bitcoin Donor (Any Amount)"] {
   background-position: -128px -16px;
 }
@@ -186,7 +199,7 @@
   background-position: -32px -32px;
 }
 
-[data-flair="Hare Today, Goon Tomorrow"] {
+[data-flair="Hare Today Goon Tomorrow"] {
   background-position: -48px -32px;
 }
 
