--- a/views/template/head.pug
+++ b/views/template/head.pug
@@ -28,11 +28,14 @@ html
 			a(href="/player" class=(config.nav.cat === 'players' ? 'active' : ''))
 				span Players
 
-			a(href="/ecltp/9" class=(config.nav.cat === 'ecltp' ? 'active' : ''))
-				span ECLTP 9
+			a(href="/eltp/21" class=(config.nav.cat === 'eltp' ? 'active' : ''))
+				span ELTP 21 Signups Open
 
 			// a(href="/leaderboards" class=(config.nav.cat === 'leaderboards' ? 'active' : ''))
 			// 	span Leaders
+
+			// a(href="/records" class=(config.nav.cat === 'leaderboards' ? 'active' : ''))
+			// 	span Records
 
 			.right
 				form(action="/search")
