--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -40,6 +40,7 @@ body
 					color white
 
 	&.ecltp
+	&.Minors
 		--color #ff0044
 
 		.nav-bar-primary
@@ -64,10 +65,11 @@ body
 					color #be4f4f
 
 .background
-	background black url('https://i.imgur.com/ycymETc.png')
-	background-position center -867px
-	// background black url('https://i.imgur.com/trirbHV.png')
-	// background-position center -922px
+	// background black url('https://i.imgur.com/ycymETc.png')
+	// background-position center -867px
+	background black url('https://i.imgur.com/trirbHV.png')
+	// background-position center -622px
+	background-position -282px -761px
 	background-size auto 100%
 	background-repeat no-repeat
 	width 100%
