--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -313,8 +313,8 @@ body
 		a
 			text-decoration none
 			padding-bottom .2rem
-			color: #858585;
-			box-shadow: inset 0 -2px 0 0 #87878729
+			color #858585
+			box-shadow inset 0 -2px 0 0 #87878729
 
 			&:hover
 				color #538cff
