--- a/views/template/foot.pug
+++ b/views/template/foot.pug
@@ -53,15 +53,13 @@ svg(height="1px" width="1px")
 			.col
 				.hd Resources
 				a(href="https://discord.com/invite/uJxUcSR") Discord
-				a(href="https://twitch.com/tpsuperleague") Twitch
 				a(href="https://reddit.com/r/eltp") Subreddit
 
 			.col
 				.hd Important
-				// a(href="/rules") Rules
 				a(href="/faq") FAQ
-				a(href="https://www.reddit.com/message/compose?to=zompus&subject=TagPro.dev Feedback") Feedback
 
 			.col
 				.hd Unimportant
 				a(href="/changelog.txt") Changelog.txt
+				a(href="https://www.youtube.com/watch?v=Pi02Cudlf_M&list=PLseDkLomexJdJGi56ZpXYE1P3jxpAlA4m&index=7") nom's adventures
