--- a/src/css/markdown.styl
+++ b/src/css/markdown.styl
@@ -51,3 +51,13 @@
 		li
 			padding 0 1rem
 			color white
+
+	a
+		text-decoration none
+		padding-bottom .2rem
+		color #858585
+		box-shadow inset 0 -2px 0 0 #87878729
+
+		&:hover
+			color #538cff
+			box-shadow none
