--- a/views/template/foot.pug
+++ b/views/template/foot.pug
@@ -62,4 +62,4 @@ svg(height="1px" width="1px")
 			.col
 				.hd Unimportant
 				a(href="/changelog.txt") Changelog.txt
-				a(href="https://www.youtube.com/watch?v=Pi02Cudlf_M&list=PLseDkLomexJdJGi56ZpXYE1P3jxpAlA4m&index=7") nom's adventures
+				a(href="https://www.youtube.com/watch?v=Pi02Cudlf_M&list=PLseDkLomexJdJGi56ZpXYE1P3jxpAlA4m&index=7") nom adventures
