add captain and manager icon to trophie cabinet

--- a/src/css/superleague.styl
+++ b/src/css/superleague.styl
@@ -842,6 +842,16 @@
 					flex 0 0 75px
 					padding-right .5rem
 
+				&.role
+					justify-content right
+					flex 0 0 75px
+					padding-right .5rem
+
+					svg
+						height .6rem
+						width .6rem
+						fill var(--teamcolor)
+
 			&:hover
 				.rank
 					color #a8ff62
