--- a/views/template/head.pug
+++ b/views/template/head.pug
@@ -35,11 +35,11 @@ html
 			a(href="/eltp-minors/21" class=(config.tier === 'Minors' ? 'active' : ''))
 				span ELTP 21 Minors
 
-			// a(href="/leaderboards" class=(config.nav.cat === 'leaderboards' ? 'active' : ''))
-			// 	span Leaders
+			//- a(href="/leaderboards" class=(config.nav.cat === 'leaderboards' ? 'active' : ''))
+			//- 	span Leaders
 
-			// a(href="/records" class=(config.nav.cat === 'leaderboards' ? 'active' : ''))
-			// 	span Records
+			//- a(href="/records" class=(config.nav.cat === 'leaderboards' ? 'active' : ''))
+			//- 	span Records
 
 			.right
 				form(action="/search")
