--- a/views/template/head.pug
+++ b/views/template/head.pug
@@ -38,8 +38,8 @@ html
 			a(href="/eltp-minors/21" class=(config.tier === 'Minors' && config.season === '21' ? 'active' : ''))
 				span 21 Minors
 
-			a(href="/records/ctf/majors" class=(config.nav.page === 'records' ? 'active' : ''))
-				span All-time Records
+			//- a(href="/records/ctf/majors" class=(config.nav.page === 'records' ? 'active' : ''))
+			//- 	span All-time Records
 
 			.right
 				form(action="/search")
