--- a/views/template/head.pug
+++ b/views/template/head.pug
@@ -32,11 +32,8 @@ html
 			//- a(href="/leaderboards" class=(config.nav.cat === 'leaderboards' ? 'active' : ''))
 			//- 	span Leaders
 
-			//- a(href="/eltp-majors/21" class=(config.tier === 'Majors' && config.season === '21' ? 'active' : ''))
-			//- 	span 21 Majors
-
-			//- a(href="/eltp-minors/21" class=(config.tier === 'Minors' && config.season === '21' ? 'active' : ''))
-			//- 	span 21 Minors
+			a(href="/eltp-majors/22" class=(config.tier === 'Majors' && config.season === '22' ? 'active' : ''))
+				span 22 Majors
 
 			//- a(href="/records/ctf/majors" class=(config.nav.page === 'records' ? 'active' : ''))
 			//- 	span All-time Records
