remove mvb formula

--- a/views/superleague-matches.pug
+++ b/views/superleague-matches.pug
@@ -143,8 +143,8 @@ include template/superleague-nav.pug
 
 										.stats.mvb
 											a(
-												href="/player/" + f.stats.mvb
-											).value= f.stats.mvb
+												href="/player/" + f.stats.gasp
+											).value= f.stats.gasp
 
 
 include template/foot.pug
