--- a/views/template/foot.pug
+++ b/views/template/foot.pug
@@ -48,7 +48,7 @@ svg(height="1px" width="1px")
 		.wrap
 			.col
 				.title Tagpro.dev
-				.desc An alternative TagPro hub for Europeans. Made by <a href="https://tagpro.koalabeast.com/profile/52d14ba81c0f1b1421277d0c">anom</a>
+				.desc An alternative TagPro hub. Made by <a href="https://tagpro.koalabeast.com/profile/52d14ba81c0f1b1421277d0c">anom</a>
 
 			.col
 				.hd Resources
@@ -57,6 +57,7 @@ svg(height="1px" width="1px")
 
 			.col
 				.hd Important
+				a(href="https://www.reddit.com/r/TagPro/comments/1abvaue/userscript_ranked_pubs/") Ranked Pubs
 				a(href="/faq") FAQ
 
 			.col
