--- a/src/css/signup.styl
+++ b/src/css/signup.styl
@@ -40,8 +40,8 @@ body
 		--size: 12rem;
 		align-items: center;
 
-		border: 2px solid currentColor;
-		box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0.15), 0 0 0 2px rgba(0, 0, 0, 0.15), inset 0 0 var(--box-blur) var(--glow), 0 0 var(--box-blur) var(--glow);
+		border 2px solid currentColor
+		box-shadow inset 0 0 0 2px rgba(0, 0, 0, 0.15), 0 0 0 2px rgba(0, 0, 0, 0.15), inset 0 0 var(--box-blur) var(--glow), 0 0 var(--box-blur) var(--glow)
 		color: var(--color, white);
 		width 950px
 		border-radius .6rem
@@ -64,7 +64,7 @@ body
 			vertical-align top
 
 		.left
-			width 65%
+			width 68%
 			padding: 3rem;
 			border-right 2px solid currentColor
 
@@ -124,8 +124,8 @@ body
 
 
 		.right
-			width 35%
-			padding 3rem
+			width 32%
+			padding 3rem 0
 
 			h2
 				font-weight 600
@@ -135,6 +135,36 @@ body
 				color white
 				padding-left .2rem
 				padding-bottom .3rem
+
+			table
+				width 100%
+				border-collapse collapse
+
+				th
+					color white
+					font-size .7rem
+					text-transform uppercase
+					font-weight 500
+					text-align right
+
+				td
+					text-align right
+					font-size .8rem
+					font-weight 500
+					color #4a6ba3
+
+				th
+				td
+					padding 3px 10px
+
+				tbody
+
+					tr:nth-of-type(odd)
+						background rgba(white, .02)
+
+				thead tr th:first-child
+				tbody tr td:first-child
+					text-align left
 
 			.bar
 				border-radius .4rem
@@ -309,8 +339,6 @@ body
 
 
 
-
-// background
 .background
 	height auto
 	width 2600px
@@ -333,7 +361,7 @@ body
 	._4
 		animation move4 80s linear infinite,fadeOut4 80s linear infinite
 
-@-webkit-keyframes move1{
+@keyframes move1{
 	from{
 		transform:translate(-700px,-200px) rotate(4deg)
 	}
@@ -341,7 +369,7 @@ body
 		transform:translate(1500px,-800px) rotate(45deg)
 	}
 }
-@-webkit-keyframes move2{
+@keyframes move2{
 	from{
 		transform:translate(0,-200px) rotate(0)
 	}
@@ -349,7 +377,7 @@ body
 		transform:translate(-1700px,-200px) rotate(10deg)
 	}
 }
-@-webkit-keyframes move3{
+@keyframes move3{
 	from{
 		transform:translate(800px,-400px)
 	}
@@ -357,7 +385,7 @@ body
 		transform:translate(-1000px,0)
 	}
 }
-@-webkit-keyframes move4{
+@keyframes move4{
 	from{
 		transform:translate(-200px,1000px)
 	}
@@ -365,7 +393,7 @@ body
 		transform:translate(-250px,-400px)
 	}
 }
-@-webkit-keyframes fadeOut1{
+@keyframes fadeOut1{
 	0%{
 		opacity:0
 	}
