--- a/views/signup.pug
+++ b/views/signup.pug
@@ -21,11 +21,11 @@ html
 				h2 Verification Required
 				h5 Step <span class="step"></span> of 2
 
-				img(src="https://i.imgur.com/wWyeptj.gif")
+				img(src="https://b.thumbs.redditmedia.com/Okql9W1FSZ86cmZ01IF5Nqvii8fQqY_G0u094ocSkhM.png")
 
 				p Hi <span class="name"></span>. Please verify your signup by switching your Tagpro flair to: <span class="flair">No Flair</span>
 
-				p.discord.hide Now go <a href="https://discord.com/invite/uJxUcSR">join the Discord</a> and say hi.
+				p.discord.hide You are required to join the <a href="https://discord.com/invite/uJxUcSR">join the Discord</a>..
 
 				button
 					.enabled Done. Verify me!
