--- a/views/signup.pug
+++ b/views/signup.pug
@@ -25,7 +25,7 @@ html
 
 				p Hi <span class="name"></span>. Please verify your signup by switching your Tagpro flair to: <span class="flair">No Flair</span>
 
-				p.discord.hide You are required to join the <a href="https://discord.com/invite/uJxUcSR">join the Discord</a>..
+				p.discord.hide Please <a href="https://discord.com/invite/uJxUcSR">join the Discord</a> to receive notifications about the season.
 
 				button
 					.enabled Done. Verify me!
