--- a/views/404.pug
+++ b/views/404.pug
@@ -3,8 +3,5 @@ html(lang="em")
 	head
 		title Page Not Found
 
-	body(style="background:black;text-align:center;padding-top:15%")
-
-		div
-
-			|<iframe width="560" height="315" src="https://www.youtube.com/embed/hbX3u7VHzV4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	body(style="background:black;display:flex;justify-content:center;align-items:center;height:100vh;margin:0")
+		<iframe width="1751" height="922" src="https://www.youtube.com/embed/Pi02Cudlf_M?list=PLseDkLomexJdJGi56ZpXYE1P3jxpAlA4m" title="Episode 7" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
