--- a/src/app/css/main.styl
+++ b/src/app/css/main.styl
@@ -1,9 +1,10 @@
+@import 'reset'
+
 :root
 	font-size 17px
 	font-family 'Montserrat', sans-serif
 	color-scheme dark
 	--width 1450px
-
 
 body
 	background #131417
@@ -358,3 +359,11 @@ body
 
 			svg
 				height 1.5rem
+
+//  imports
+// --------------------------------------------------------------------------
+@import 'markdown'
+@import 'players'
+@import 'superleague'
+@import 'player'
+@import 'spy'
