--- a/views/template/foot.pug
+++ b/views/template/foot.pug
@@ -48,7 +48,7 @@ svg(height="1px" width="1px")
 		.wrap
 			.col
 				.title Tagpro.dev
-				.desc An alternative TagPro hub. Made by <a href="https://tagpro.koalabeast.com/profile/52d14ba81c0f1b1421277d0c">anom</a>
+				.desc TagPro hub. Made by <a href="https://tagpro.koalabeast.com/profile/52d14ba81c0f1b1421277d0c">anom</a>, now run by <a href="https://tagpro.koalabeast.com/profile/52d14ba11c0f1b1421277903">Hjalpa</a>.
 
 			.col
 				.hd Resources
@@ -58,6 +58,7 @@ svg(height="1px" width="1px")
 			.col
 				.hd Important
 				a(href="/faq") FAQ
+				a(href="https://docs.google.com/spreadsheets/d/1qr5NCkRX9vIe8_x9kpcO9zjJ_KWGs4buYyIriYVVE70/edit?gid=1586711904#gid=1586711904") LTP Winners
 
 			.col
 				.hd Unimportant
