--- a/views/template/head.pug
+++ b/views/template/head.pug
@@ -4,16 +4,9 @@ html
 		title= config.title
 		meta(charset='utf-8')
 		link(rel='stylesheet', href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap")
-		link(rel='stylesheet', href='/init.css')
+		link(rel='stylesheet', href='/app.css')
 		link(rel='icon', href='/favicon.svg', type='image/svg+xml')
-		script(defer, src='/init.js')
-		|<script src="https://t.usermaven.com/lib.js"
-		|	data-key="UM0zeZQ89m"
-		|	data-tracking-host="https://events.usermaven.com"
-		|	data-autocapture="true"
-		|	defer>
-		|</script>
-		|<script>window.usermaven = window.usermaven || (function(){(window.usermavenQ = window.usermavenQ || []).push(arguments);})</script>
+		script(defer, src='/app.js')
 
 	body(
 		class= config.nav.cat
